setup Portfolio page, fixed formatting issues on mobile

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -24,3 +24,9 @@ body {
 .carousel-control-next-icon {
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23000' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E") !important;
 }
+
+.card:hover {
+  background-color: black;
+  opacity: 0.7;
+  cursor: pointer;
+}
